# facts

./: .facts  .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.facts  install.sh  skills.sh
.github/workflows/: release.yml
npm/: install.js  package.json
pypi/: .gitignore  README.md  pyproject.toml  setup.py
pypi/facts_cli/: __init__.py
skills/facts/: SKILL.md
skills/facts-discover/: SKILL.md
skills/facts-implement/: SKILL.md
skills/facts-refine/: SKILL.md
src/: add.rs  check.rs  color.rs  edit.rs  fmt.rs  get.rs  id.rs  init.rs  lint.rs  list.rs  locate.rs  lock.rs  main.rs  model.rs  move_fact.rs  parser.rs  project.rs  remove.rs  skills.rs  tags.rs  uninit.rs  update.rs  writer.rs
tests/: cli.rs
