[package]
name = "facts"
version = "0.5.3"
edition = "2024"
description = "A CLI for fact-driven development with coding agents"
license = "MIT"
repository = "https://github.com/av/facts"
authors = ["av <av@av.codes>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2"
predicates = "3"
